--- a/index.html
+++ b/index.html
@@ -5,5 +5,18 @@
     <title>Asosan Bio</title>
   </head>
   <body>
+    <section class="big-content" id="home">
+      <h1>Asosan</h1>
+    </section>
+    <section class="big-content" id="about">
+      <h3></h3>
+    </section>
+    <section class="big-content" id="activity">
+    </section>
+    <section class="big-content" id="sns">
+    </section>
+    <footer>
+
+    </footer>
   </body>
 </html>
