--- a/index.html
+++ b/index.html
@@ -2,21 +2,75 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Asosan Bio</title>
+    <meta name="language" content="english">
+    <meta name="author" content="Asosan">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=yes" />
+    <meta name="description" content="This site is open to the public for Asosan's portfolio. Check it out!" />
+    <meta name="robots" content="index, follow" />
+    <meta name="keywords" content="Asosan, asosan, Tsukukoma, 筑駒" />
+    <meta property="og:site_name" content="Asosan" />
+    <meta property="og:url" content="https://asosantk.github.io/portfolio/" />
+    <link rel="canonical" href="https://asosantk.github.io/portfolio/" />
+    <meta property="og:title" content="Asosan" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="This site is open to the public for Asosan's portfolio. Check it out!" />
+    <meta property="og:image" content="" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@Asosan_Tk72" />
+    <meta name="twitter:description" content="This site is open to the public for Asosan's portfolio. Check it out!" />
+    <meta name="twitter:image:src" content="" />
+    <meta property="og:locale" content="ja_JP" />
+    <meta name="msapplication-TileImage" content="" />
+    <meta name="msapplication-TileColor" content="" />
+    <!--page-icon-->
+    <link rel="icon" href="" sizes="16x16" type="image/png" />
+    <link rel="icon" href="" sizes="32x32" type="image/png" />
+    <link rel="icon" href="" sizes="48x48" type="image/png" />
+    <link rel="icon" href="" sizes="62x62" type="image/png" />
+    <link rel="shortcut icon" href="" type="image/x-icon" />
+    <link rel="apple-touch-icon-precomposed" href="" />
+    <meta name="format-detection" content="email=no, telephone=no, address=no" />
+    <link rel="stylesheet" href="style.css">
+    <script src="//code.jquery.com/jquery-3.4.1.min.js"></script>
   </head>
   <body>
+    <header>
+
+    </header>
     <section class="big-content" id="home">
       <h1>Asosan</h1>
+
     </section>
     <section class="big-content" id="about">
-      <h3></h3>
+      <h2></h2>
+
+    </section>
+    <section class="big-content" id="education">
+      <h2>Education</h2>
+      <tr>
+        <th>2012</th>
+        <th>Yamanaka ES</th>
+      </tr>
+      <tr>
+        <th>2018</th>
+        <th>Tsukukoma JHS</th>
+      </tr>
+      <tr>
+        <th>2021</th>
+        <th>Tsukukoma HS</th>
+      </tr>
+
     </section>
     <section class="big-content" id="activity">
+      <h2>Activity</h2>
+
     </section>
     <section class="big-content" id="sns">
     </section>
     <footer>
-
+      <h4>Asosan</h4>
+      <small class="footer-copyright">Copyright &copy; 2021 Asosan Inc. All rights reserved.</small>
     </footer>
   </body>
 </html>
