--- a/index.html
+++ b/index.html
@@ -43,30 +43,96 @@
 
     </section>
     <section class="big-content" id="about">
-      <h2></h2>
+      <h2>私について</h2>
+      <p>はじめまして。現在高校1年生のAsosanと申します。趣味はPCです。最近はアプリの開発をちょこちょこやっています。気軽に話しかけてくださいね^^</p>
 
     </section>
     <section class="big-content" id="education">
-      <h2>Education</h2>
-      <tr>
-        <th>2012</th>
-        <th>Yamanaka ES</th>
-      </tr>
-      <tr>
-        <th>2018</th>
-        <th>Tsukukoma JHS</th>
-      </tr>
-      <tr>
-        <th>2021</th>
-        <th>Tsukukoma HS</th>
-      </tr>
+      <h2>学歴</h2>
+      <table>
+        <tr>
+          <th>2012</th>
+          <th>山中小学校</th>
+        </tr>
+        <tr>
+          <th>2018</th>
+          <th>筑波大学附属駒場中学校</th>
+        </tr>
+        <tr>
+          <th>2021</th>
+          <th>筑波大学附属駒場高等学校</th>
+        </tr>
+      </table>
 
     </section>
-    <section class="big-content" id="activity">
-      <h2>Activity</h2>
-
+    <section class="big-content" id="activity-in">
+      <h2>校内活動</h2>
+      <table>
+        <tr>
+          <th>中1</th>
+          <th>水田委員長</th>
+        </tr>
+        <tr>
+          <th>中2</th>
+          <th>中学生徒会会計</th>
+        </tr>
+        <tr>
+          <th>中3</th>
+          <th>中学生徒会長</th>
+        </tr>
+        <tr>
+          <th></th>
+          <th>HRデコ会計</th>
+        </tr>
+      </table>
     </section>
+
+    <section class="big-content" id="activity-out">
+      <h2>校内活動</h2>
+      <table>
+        <tr>
+          <th>中1</th>
+          <th>水田委員長</th>
+        </tr>
+        <tr>
+          <th>中2</th>
+          <th>中学生徒会会計</th>
+        </tr>
+        <tr>
+          <th>中3</th>
+          <th>中学生徒会長</th>
+        </tr>
+        <tr>
+          <th></th>
+          <th>HRデコ会計</th>
+        </tr>
+      </table>
+    </section>
+
     <section class="big-content" id="sns">
+      <h2>SNS</h2>
+      <table>
+        <tr>
+          <th>Twitter</th>
+          <th>@Asosan_Tk72</th>
+        </tr>
+        <tr>
+          <th>Facebook</th>
+          <th>@Asosan_Tk72</th>
+        </tr>
+        <tr>
+          <th>Instagram</th>
+          <th>@Asosan_Tk72</th>
+        </tr>
+        <tr>
+          <th>GitHub</th>
+          <th>@Asosan_Tk72</th>
+        </tr>
+      </table>
+    </section>
+    <section class="big-content" id="contact">
+      <h2>Contact</h2>
+      <p>何か質問等があれば、以下のフォームよりご記入ください。時間がある時に目を通します。</p>
     </section>
     <footer>
       <h4>Asosan</h4>
