メインページリンクの修正、PCSpaseからの挙動の確認

--- a/index.html
+++ b/index.html
@@ -114,19 +114,19 @@
       <table>
         <tr>
           <th>Twitter</th>
-          <th>@Asosan_Tk72</th>
+          <th><a href="https://twitter.com/Asosan_Tk72">@Asosan_Tk72</a></th>
         </tr>
         <tr>
           <th>Facebook</th>
-          <th>@Asosan_Tk72</th>
+          <th><a href="https://twitter.com/Asosan_Tk72">@Asosan_Tk72</a></th>
         </tr>
         <tr>
           <th>Instagram</th>
-          <th>@Asosan_Tk72</th>
+          <th><a href="https://twitter.com/Asosan_Tk72">@Asosan_Tk72</a></th>
         </tr>
         <tr>
           <th>GitHub</th>
-          <th>@Asosan_Tk72</th>
+          <th><a href="https://twitter.com/Asosan_Tk72">@Asosan_Tk72</a></th>
         </tr>
       </table>
     </section>
