--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
     <meta name="format-detection" content="email=no, telephone=no, address=no" />
     <link rel="stylesheet" href="style.css">
     <script src="//code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!--Adobe Fonts-->
+    <script>
+    (function(d) {
+      var config = {
+        kitId: 'rfg6pqh',
+        scriptTimeout: 3000,
+        async: true
+      },
+      h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+    })(document);
+    </script>
   </head>
   <body>
     <header>
@@ -45,26 +56,8 @@
     <section class="big-content" id="about">
       <h2>私について</h2>
       <p>はじめまして。現在高校1年生のAsosanと申します。趣味はPCです。最近はアプリの開発をちょこちょこやっています。気軽に話しかけてくださいね^^</p>
-
     </section>
-    <section class="big-content" id="education">
-      <h2>学歴</h2>
-      <table>
-        <tr>
-          <th>2012</th>
-          <th>山中小学校</th>
-        </tr>
-        <tr>
-          <th>2018</th>
-          <th>筑波大学附属駒場中学校</th>
-        </tr>
-        <tr>
-          <th>2021</th>
-          <th>筑波大学附属駒場高等学校</th>
-        </tr>
-      </table>
 
-    </section>
     <section class="big-content" id="activity-in">
       <h2>校内活動</h2>
       <table>
@@ -84,29 +77,22 @@
           <th></th>
           <th>HRデコ会計</th>
         </tr>
-      </table>
-    </section>
-
-    <section class="big-content" id="activity-out">
-      <h2>校内活動</h2>
-      <table>
         <tr>
-          <th>中1</th>
-          <th>水田委員長</th>
-        </tr>
-        <tr>
-          <th>中2</th>
-          <th>中学生徒会会計</th>
-        </tr>
-        <tr>
-          <th>中3</th>
-          <th>中学生徒会長</th>
+          <th>高1</th>
+          <th>文化祭実行委員会 装飾・広報部門</th>
         </tr>
         <tr>
           <th></th>
-          <th>HRデコ会計</th>
+          <th>特別参加団体 デコ責任者 with Mijyu</th>
         </tr>
       </table>
+
+      <p>学校では三大行事を主とした幅広い活動に積極的にかかわっています。本年度は特に文化祭において実行委員会からデコ活動まで幅広く活動する予定です。</p>
+    </section>
+
+    <section class="big-content" id="activity-out">
+      <h2>個人活動</h2>
+      <p>主にPCを活用し、アプリの開発やAdobeのソフトを使用した創作活動等を行っています。</p>
     </section>
 
     <section class="big-content" id="sns">
@@ -127,6 +113,23 @@
         <tr>
           <th>GitHub</th>
           <th><a href="https://twitter.com/Asosan_Tk72">@Asosan_Tk72</a></th>
+        </tr>
+      </table>
+    </section>
+    <section class="big-content" id="education">
+      <h2>学歴</h2>
+      <table>
+        <tr>
+          <th>2012</th>
+          <th>山中小学校</th>
+        </tr>
+        <tr>
+          <th>2018</th>
+          <th>筑波大学附属駒場中学校</th>
+        </tr>
+        <tr>
+          <th>2021</th>
+          <th>筑波大学附属駒場高等学校</th>
         </tr>
       </table>
     </section>
