6/8授業時の修正

--- a/index.html
+++ b/index.html
@@ -46,16 +46,19 @@
     </script>
   </head>
   <body>
-    <header>
+    <nav>
+    </nav>
 
-    </header>
     <section class="big-content" id="home">
-      <h1>Asosan</h1>
-
+      <figure class="home-bigimage"></figure>
+      <h1 class="home-var">Asosan</h1>
     </section>
+
     <section class="big-content" id="about">
-      <h2>私について</h2>
-      <p>はじめまして。現在高校1年生のAsosanと申します。趣味はPCです。最近はアプリの開発をちょこちょこやっています。気軽に話しかけてくださいね^^</p>
+      <div class="hero-content">
+        <h2>About me.</h2>
+        <p>はじめまして。現在高校1年生のAsosanと申します。趣味はPCです。最近はアプリの開発をちょこちょこやっています。気軽に話しかけてくださいね^^</p>
+      </div>
     </section>
 
     <section class="big-content" id="activity-in">
