--- a/index.html
+++ b/index.html
@@ -57,89 +57,41 @@
     <section class="big-content" id="about">
       <div class="hero-content">
         <h2>About me.</h2>
-        <p>はじめまして。現在高校1年生のAsosanと申します。趣味はPCです。最近はアプリの開発をちょこちょこやっています。気軽に話しかけてくださいね^^</p>
+        <p>Hi!  My name is Asosan.  I'm a Senior High School Student.</p>
       </div>
     </section>
+    <div class="title-container">
+      <section class="tile" id="activity-in">
+        <div class="flex-container row">
+          <h2></h2>
+          <div class="">
 
-    <section class="big-content" id="activity-in">
-      <h2>校内活動</h2>
-      <table>
-        <tr>
-          <th>中1</th>
-          <th>水田委員長</th>
-        </tr>
-        <tr>
-          <th>中2</th>
-          <th>中学生徒会会計</th>
-        </tr>
-        <tr>
-          <th>中3</th>
-          <th>中学生徒会長</th>
-        </tr>
-        <tr>
-          <th></th>
-          <th>HRデコ会計</th>
-        </tr>
-        <tr>
-          <th>高1</th>
-          <th>文化祭実行委員会 装飾・広報部門</th>
-        </tr>
-        <tr>
-          <th></th>
-          <th>特別参加団体 デコ責任者 with Mijyu</th>
-        </tr>
-      </table>
+          </div>
+          <div class="section-content">
+            <h3 class="subhead"></h3>
 
-      <p>学校では三大行事を主とした幅広い活動に積極的にかかわっています。本年度は特に文化祭において実行委員会からデコ活動まで幅広く活動する予定です。</p>
-    </section>
+          </div>
+        </div>
+      </section>
 
-    <section class="big-content" id="activity-out">
-      <h2>個人活動</h2>
-      <p>主にPCを活用し、アプリの開発やAdobeのソフトを使用した創作活動等を行っています。</p>
-    </section>
+      <section class="big-content" id="activity-out">
+        <h2>個人活動</h2>
+        <p>主にPCを活用し、アプリの開発やAdobeのソフトを使用した創作活動等を行っています。</p>
+      </section>
 
-    <section class="big-content" id="sns">
-      <h2>SNS</h2>
-      <table>
-        <tr>
-          <th>Twitter</th>
-          <th><a href="https://twitter.com/Asosan_Tk72">@Asosan_Tk72</a></th>
-        </tr>
-        <tr>
-          <th>Facebook</th>
-          <th><a href="https://twitter.com/Asosan_Tk72">@Asosan_Tk72</a></th>
-        </tr>
-        <tr>
-          <th>Instagram</th>
-          <th><a href="https://twitter.com/Asosan_Tk72">@Asosan_Tk72</a></th>
-        </tr>
-        <tr>
-          <th>GitHub</th>
-          <th><a href="https://twitter.com/Asosan_Tk72">@Asosan_Tk72</a></th>
-        </tr>
-      </table>
-    </section>
-    <section class="big-content" id="education">
-      <h2>学歴</h2>
-      <table>
-        <tr>
-          <th>2012</th>
-          <th>山中小学校</th>
-        </tr>
-        <tr>
-          <th>2018</th>
-          <th>筑波大学附属駒場中学校</th>
-        </tr>
-        <tr>
-          <th>2021</th>
-          <th>筑波大学附属駒場高等学校</th>
-        </tr>
-      </table>
-    </section>
-    <section class="big-content" id="contact">
-      <h2>Contact</h2>
-      <p>何か質問等があれば、以下のフォームよりご記入ください。時間がある時に目を通します。</p>
-    </section>
+      <section class="big-content" id="sns">
+        <h2>SNS</h2>
+
+      </section>
+      <section class="big-content" id="education">
+        <h2>学歴</h2>
+
+      </section>
+      <section class="big-content" id="contact">
+        <h2>Contact</h2>
+        <p>何か質問等があれば、以下のフォームよりご記入ください。時間がある時に目を通します。</p>
+      </section>
+    </div>
     <footer>
       <h4>Asosan</h4>
       <small class="footer-copyright">Copyright &copy; 2021 Asosan Inc. All rights reserved.</small>
