6/15授業時の設定

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <meta name="format-detection" content="email=no, telephone=no, address=no" />
     <link rel="stylesheet" href="style.css">
     <script src="//code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
     <!--Adobe Fonts-->
     <script>
     (function(d) {
@@ -46,6 +47,7 @@
     </script>
   </head>
   <body>
+    <!--モーダル作る-->
     <nav>
     </nav>
 
@@ -63,38 +65,93 @@
     <div class="title-container">
       <section class="tile" id="activity-in">
         <div class="flex-container row">
-          <h2></h2>
-          <div class="">
-
+          <h2>School Activity</h2>
+          <div class="image-container">
+            <img src="sample.jpg"></img>
           </div>
           <div class="section-content">
-            <h3 class="subhead"></h3>
-
+            <h3 class="subhead">Connect with family and friends while watching and listening together in SharePlay. Be more present in the moment with Focus. Explore the world in unprecedented detail with a reimagined Maps. And use powerful on‑device intelligence to do more with iPhone than ever before.</h3>
+            <input type="button" id="school button" value="See Detail">
           </div>
         </div>
       </section>
 
-      <section class="big-content" id="activity-out">
-        <h2>個人活動</h2>
-        <p>主にPCを活用し、アプリの開発やAdobeのソフトを使用した創作活動等を行っています。</p>
+      <section class="tile" id="activity-in">
+        <div class="flex-container row">
+          <h2>School Activity</h2>
+          <div class="image-container">
+            <img src="sample.jpg"></img>
+          </div>
+          <div class="section-content">
+            <h3 class="subhead">Connect with family and friends while watching and listening together in SharePlay. Be more present in the moment with Focus. Explore the world in unprecedented detail with a reimagined Maps. And use powerful on‑device intelligence to do more with iPhone than ever before.</h3>
+            <input type="button" id="school button" value="See Detail">
+          </div>
+        </div>
       </section>
 
-      <section class="big-content" id="sns">
-        <h2>SNS</h2>
+      <section class="tile" id="activity-in">
+        <div class="flex-container row">
+          <h2>School Activity</h2>
+          <div class="image-container">
+            <img src="sample.jpg"></img>
+          </div>
+          <div class="section-content">
+            <h3 class="subhead">Connect with family and friends while watching and listening together in SharePlay. Be more present in the moment with Focus. Explore the world in unprecedented detail with a reimagined Maps. And use powerful on‑device intelligence to do more with iPhone than ever before.</h3>
+            <input type="button" id="school button" value="See Detail">
+          </div>
+        </div>
+      </section>
 
-      </section>
-      <section class="big-content" id="education">
-        <h2>学歴</h2>
+      <section class="tile" id="activity-in">
+        <div class="flex-container row">
+          <h2>文化祭まで</h2>
+          <div class="image-container">
+            <img src="sample.jpg"></img>
+          </div>
+          <div class="section-content">
+            <h3 class="subhead">Connect with family and friends while watching and listening together in SharePlay. Be more present in the moment with Focus. Explore the world in unprecedented detail with a reimagined Maps. And use powerful on‑device intelligence to do more with iPhone than ever before.</h3>
+            <input type="button" id="school button" value="See Detail">
+          </div>
+          <div class="countdown">
+                <span class="countdown-day cdn"></span>
+                <span class="countdown-text cdn">days</span>
+                <span class="countdown-hour cdn"></span>
+                <span class="countdown-text cdn">hours</span>
+                <span class="countdown-min cdn"></span>
+                <span class="countdown-text cdn">mins</span>
+                <span class="countdown-sec cdn"></span>
+                <span class="countdown-text cdn">secs</span>
+          </div>
+          <table>
+          <tr>
+            <th>Twitter</th>
+            <th><a href="https://twitter.com/Asosan_Tk72">@Asosan_Tk72</a></th>
+          </tr>
+          <tr>
+            <th>Facebook</th>
+            <th><a href="https://twitter.com/Asosan_Tk72">@Asosan_Tk72</a></th>
+          </tr>
+          <tr>
+            <th>Instagram</th>
+            <th><a href="https://twitter.com/Asosan_Tk72">@Asosan_Tk72</a></th>
+          </tr>
+          <tr>
+            <th>GitHub</th>
+            <th><a href="https://twitter.com/Asosan_Tk72">@Asosan_Tk72</a></th>
+          </tr>
+        </table>
 
+        </div>
       </section>
-      <section class="big-content" id="contact">
-        <h2>Contact</h2>
-        <p>何か質問等があれば、以下のフォームよりご記入ください。時間がある時に目を通します。</p>
-      </section>
+
     </div>
+
     <footer>
-      <h4>Asosan</h4>
-      <small class="footer-copyright">Copyright &copy; 2021 Asosan Inc. All rights reserved.</small>
+      <div class="footer-content">
+        <h4>Asosan</h4>
+        <small class="footer-copyright">Copyright &copy; 2021 Asosan Inc. All rights reserved.</small>
+      </div>
+
     </footer>
   </body>
 </html>
