アップロードの修正2

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
       <section class="tile" id="activity-in">
         <div class="flex-container row">
-          <h2>文化祭まで</h2>
+          <h2>Until Bunkasai</h2>
           <div class="image-container">
             <img src="sample.jpg"></img>
           </div>
