--- a/index.html
+++ b/index.html
@@ -51,16 +51,17 @@
     <nav>
     </nav>
 
-    <section class="big-content" id="home">
-      <figure class="home-bigimage"></figure>
-      <h1 class="home-var">Asosan</h1>
-    </section>
+    <section class="section-hero">
+      <div class="big-content" id="home">
+        <figure class="home-bigimage"></figure>
+        <h1 class="home-var">Asosan</h1>
+      </div>
 
-
-    <section class="big-content" id="about">
-      <div class="hero-content">
-        <h2>About me.</h2>
-        <p>Hi! My name is Asosan.  I'm a Senior High School Student.</p>
+      <div class="hero-container" id="about">
+        <div class="hero-content">
+          <h2>About me.</h2>
+          <h3>Hi! My name is Asosan.  I'm a Senior High School Student.</h3>
+        </div>
       </div>
     </section>
     <div class="title-container">
