6/29授業時の修正

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <meta name="msapplication-TileImage" content="" />
     <meta name="msapplication-TileColor" content="" />
     <!--page-icon-->
-    <link rel="icon" href="" sizes="16x16" type="image/png" />
+    <!--<link rel="icon" href="" sizes="16x16" type="image/png" />
     <link rel="icon" href="" sizes="32x32" type="image/png" />
     <link rel="icon" href="" sizes="48x48" type="image/png" />
     <link rel="icon" href="" sizes="62x62" type="image/png" />
     <link rel="shortcut icon" href="" type="image/x-icon" />
-    <link rel="apple-touch-icon-precomposed" href="" />
+    <link rel="apple-touch-icon-precomposed" href="" />-->
     <meta name="format-detection" content="email=no, telephone=no, address=no" />
     <link rel="stylesheet" href="style.css">
     <script src="//code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -48,8 +48,6 @@
   </head>
   <body>
     <!--モーダル作る-->
-    <nav>
-    </nav>
 
     <section class="section-hero">
       <div class="big-content" id="home">
@@ -69,7 +67,7 @@
         <div class="flex-container row">
           <h2>School Activity</h2>
           <div class="image-container">
-            <img src="sample.jpg"></img>
+            <img src="sample.jpg" alt="">
           </div>
           <div class="section-content">
             <h3 class="subhead">Connect with family and friends while watching and listening together in SharePlay. Be more present in the moment with Focus. Explore the world in unprecedented detail with a reimagined Maps. And use powerful on‑device intelligence to do more with iPhone than ever before.</h3>
@@ -77,42 +75,52 @@
           </div>
         </div>
       </section>
+		
+	  <div class="modal" id="activityin-detail">
+		  <div　class="content-table">
+			  <div class="modal-content">
+				  
+			  </div>
+		  </div>
+	  </div>
+		
+		
 
-      <section class="tile" id="activity-in">
+      <section class="tile" id="activity-io">
         <div class="flex-container row">
           <h2>School Activity</h2>
           <div class="image-container">
-            <img src="sample.jpg"></img>
+            <img src="sample.jpg" alt="">
           </div>
           <div class="section-content">
             <h3 class="subhead">Connect with family and friends while watching and listening together in SharePlay. Be more present in the moment with Focus. Explore the world in unprecedented detail with a reimagined Maps. And use powerful on‑device intelligence to do more with iPhone than ever before.</h3>
-            <input type="button" id="school button" value="See Detail">
+            <input type="button" id="school-button" value="See Detail">
           </div>
         </div>
       </section>
 
-      <section class="tile" id="activity-in">
+      <section class="tile" id="activity-out">
         <div class="flex-container row">
           <h2>School Activity</h2>
           <div class="image-container">
-            <img src="sample.jpg"></img>
+            <img src="sample.jpg" alt="">
           </div>
           <div class="section-content">
             <h3 class="subhead">Connect with family and friends while watching and listening together in SharePlay. Be more present in the moment with Focus. Explore the world in unprecedented detail with a reimagined Maps. And use powerful on‑device intelligence to do more with iPhone than ever before.</h3>
-            <input type="button" id="school button" value="See Detail">
+            <input type="button" id="ac-button" value="See Detail">
           </div>
         </div>
       </section>
 
-      <section class="tile" id="activity-in">
+      <section class="tile" id="school">
         <div class="flex-container row">
           <h2>Until Bunkasai</h2>
           <div class="image-container">
-            <img src="sample.jpg"></img>
+            <img src="sample.jpg" alt="">
           </div>
           <div class="section-content">
             <h3 class="subhead">Connect with family and friends while watching and listening together in SharePlay. Be more present in the moment with Focus. Explore the world in unprecedented detail with a reimagined Maps. And use powerful on‑device intelligence to do more with iPhone than ever before.</h3>
-            <input type="button" id="school button" value="See Detail">
+            <input type="button" id="a-button" value="See Detail">
           </div>
           <table>
           <tr>
